--- a/_dev/css/theme/components/customer/_customer-links.scss
+++ b/_dev/css/theme/components/customer/_customer-links.scss
@@ -42,7 +42,7 @@
       white-space: normal;
     }
 
-    @include hf() {
+    @include hover-focus() {
       color: $primary;
       text-decoration: none;
     }
