--- a/_dev/css/theme/components/menu/_mainmenu.scss
+++ b/_dev/css/theme/components/menu/_mainmenu.scss
@@ -46,7 +46,7 @@
       font-weight: 700;
       color: $gray-900;
 
-      @include hf() {
+      @include hover-focus() {
         text-decoration: none;
       }
 
