--- a/_dev/css/listing/components/listing-display/_display-toggle.scss
+++ b/_dev/css/listing/components/listing-display/_display-toggle.scss
@@ -11,7 +11,7 @@
     background: $gray-100;
     border-radius: 50%;
 
-    @include hf () {
+    @include hover-focus() {
       color: $gray-900;
       background: $gray-200;
     }
