--- a/_dev/css/theme/layout/_header.scss
+++ b/_dev/css/theme/layout/_header.scss
@@ -31,7 +31,7 @@
       padding: map-get($spacers, 2);
     }
 
-    @include hf() {
+    @include hover-focus() {
       color: $black;
       text-decoration: none;
       background: $gray-100;
