--- a/_dev/css/theme/override/bootstrap/_custom-control.scss
+++ b/_dev/css/theme/override/bootstrap/_custom-control.scss
@@ -81,3 +81,11 @@
     }
   }
 }
+
+.custom-checkbox-block {
+  padding-left: $custom-control-indicator-size;
+  .custom-control-label::after,
+  .custom-control-label::before {
+    left: -#{$custom-control-indicator-size};
+  }
+}
