cms content ordered list added decimals instead of discs

--- a/_dev/css/theme/components/cms/_cms-content.scss
+++ b/_dev/css/theme/components/cms/_cms-content.scss
@@ -7,6 +7,11 @@
     list-style-position: inside;
   }
 
+  ol {
+    list-style: decimal;
+    padding-left: rem-calc(30px);
+  }
+
   img {
     max-width: 100%;
     height: auto;
