--- a/_dev/css/theme/base/_fonts.scss
+++ b/_dev/css/theme/base/_fonts.scss
@@ -56,6 +56,7 @@
   font-family: "Material Icons";
   font-style: normal;
   font-weight: 400;
+  font-display: block;
   src: url("~material-design-icons/iconfont/MaterialIcons-Regular.woff2") format("woff2"), url("~material-design-icons/iconfont/MaterialIcons-Regular.woff") format("woff"), url("~material-design-icons/iconfont/MaterialIcons-Regular.ttf") format("truetype");
 }
 
