--- a/_dev/css/theme/components/product/_products-list.scss
+++ b/_dev/css/theme/components/product/_products-list.scss
@@ -1,6 +1,8 @@
+@use "sass:math";
+
 .products-list {
   &__block {
-    padding: 0 #{$grid-gutter-width / 2};
+    padding: 0 math.div($grid-gutter-width, 2);
     margin-bottom: $grid-gutter-width;
 
     &--grid {
