--- a/_dev/css/theme/components/search/_search-result.scss
+++ b/_dev/css/theme/components/search/_search-result.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 
 .js-search-result {
   @include media-breakpoint-up(lg) {
@@ -6,8 +7,8 @@
     right: 0;
     left: 0;
     z-index: 99;
-    padding: #{$search-input-height / 2 + #{map-get($spacers, 2)}} map-get($spacers, 3) map-get($spacers, 3);
-    margin-top: -#{$search-input-height / 2};
+    padding: #{math.div($search-input-height, 2) + #{map-get($spacers, 2)}} map-get($spacers, 3) map-get($spacers, 3);
+    margin-top: -#{math.div($search-input-height, 2)};
     background: $white;
     border: 1px solid $border-color;
     border-radius: 0 0 $border-radius $border-radius;
