--- a/_dev/css/theme/components/cart/_cart-dropdown.scss
+++ b/_dev/css/theme/components/cart/_cart-dropdown.scss
@@ -1,7 +1,9 @@
+@use "sass:map";
+
 .cart-dropdown {
   &__content {
     max-height: rem-calc(500px);
-    padding: map-get($spacers, 2) map-get($spacers, 3) map-get($spacers, 3);
+    padding: map.get($spacers, 2) map.get($spacers, 3) map.get($spacers, 3);
     overflow-x: hidden;
     overflow-y: auto;
   }
