--- a/_dev/css/product/components/product-gallery/_product-main-images.scss
+++ b/_dev/css/product/components/product-gallery/_product-main-images.scss
@@ -1,10 +1,12 @@
+@use "sass:map";
+
 .product-main-images {
   position: relative;
 
   &__modal-trigger-layer {
     position: absolute;
-    right: map-get($spacers, 2);
-    bottom: map-get($spacers, 2);
+    right: map.get($spacers, 2);
+    bottom: map.get($spacers, 2);
     z-index: 2;
 
     width: 1.6em;
