--- a/_dev/css/product/components/product-gallery/_product-thumbs.scss
+++ b/_dev/css/product/components/product-gallery/_product-thumbs.scss
@@ -1,9 +1,11 @@
+@use "sass:map";
+
 .product-thumbs {
-  margin-right: -#{map-get($spacers, 1)};
-  margin-left: -#{map-get($spacers, 1)};
+  margin-right: -#{map.get($spacers, 1)};
+  margin-left: -#{map.get($spacers, 1)};
 
   &__elem {
-    padding: 0 map-get($spacers, 1);
+    padding: 0 map.get($spacers, 1);
     cursor: pointer;
     opacity: .3;
     transition: .3s ease opacity;
