--- a/_dev/css/theme/components/cart/_cart-products.scss
+++ b/_dev/css/theme/components/cart/_cart-products.scss
@@ -1,20 +1,22 @@
+@use "sass:map";
+
 .cart-products {
   display: flex;
-  padding-bottom: map-get($spacers, 3);
+  padding-bottom: map.get($spacers, 3);
 
   &:not(:first-child) {
-    padding-top: map-get($spacers, 3);
+    padding-top: map.get($spacers, 3);
     border-top: 1px solid $border-color;
   }
 
   &__thumb {
     @include custom-col(rem-calc(80px));
-    padding-right: map-get($spacers, 2);
+    padding-right: map.get($spacers, 2);
   }
 
   &__desc {
     flex: 1 1;
-    padding-right: map-get($spacers, 2);
+    padding-right: map.get($spacers, 2);
   }
 
   &__remove {
