--- a/_dev/css/theme/components/customer/_address.scss
+++ b/_dev/css/theme/components/customer/_address.scss
@@ -1,3 +1,5 @@
+@use "sass:map";
+
 .address {
   &__header {
     background-color: transparent;
@@ -17,7 +19,7 @@
 
     a {
       @include make-col(6);
-      padding: map-get($spacers, 2);
+      padding: map.get($spacers, 2);
       color: $gray-900;
       text-align: center;
 
