--- a/_dev/css/theme/components/homeslider/_homeslider.scss
+++ b/_dev/css/theme/components/homeslider/_homeslider.scss
@@ -1,3 +1,5 @@
+@use "sass:map";
+
 .homeslider {
 
   &__img {
@@ -29,7 +31,7 @@
   &__arrow {
     top: 0;
     bottom: 0;
-    padding: 0 map-get($spacers, 3);
+    padding: 0 map.get($spacers, 3);
     line-height: 1;
 
     > * {
