--- a/_dev/css/theme/components/links-list/_links-list.scss
+++ b/_dev/css/theme/components/links-list/_links-list.scss
@@ -1,5 +1,7 @@
+@use "sass:map";
+
 .links-list {
-  padding: 0 0 map-get($spacers, 4);
+  padding: 0 0 map.get($spacers, 4);
   margin: 0;
   @include media-breakpoint-up(lg) {
     padding: 0;
@@ -8,7 +10,7 @@
 
   &__elem {
     &:not(:last-child) {
-      margin: 0 0 map-get($spacers, 2);
+      margin: 0 0 map.get($spacers, 2);
     }
   }
 
