--- a/_dev/css/theme/components/menu/_mainmenu.scss
+++ b/_dev/css/theme/components/menu/_mainmenu.scss
@@ -1,3 +1,5 @@
+@use "sass:map";
+
 .main-menu {
   $self: &;
 
@@ -10,7 +12,7 @@
   }
 
   &__dropdown {
-    margin: -#{$modal-inner-padding} -#{$modal-inner-padding} map-get($spacers, 3);
+    margin: -#{$modal-inner-padding} -#{$modal-inner-padding} map.get($spacers, 3);
     border-bottom: 1px solid $border-color;
     @include media-breakpoint-up(md) {
       position: relative;
@@ -23,7 +25,7 @@
 
   &__list {
     @include media-breakpoint-up(md) {
-      margin: 0 0 map-get($spacers, 2);
+      margin: 0 0 map.get($spacers, 2);
 
       &--1 {
         display: flex;
@@ -51,14 +53,14 @@
       }
 
       @include media-breakpoint-up(md) {
-        padding: map-get($spacers, 3) map-get($spacers, 4);
+        padding: map.get($spacers, 3) map.get($spacers, 4);
       }
     }
 
     &--sub {
       color: $gray-900;
       @include media-breakpoint-up(md) {
-        margin: 0 0 map-get($spacers, 1);
+        margin: 0 0 map.get($spacers, 1);
       }
     }
 
@@ -67,23 +69,23 @@
     }
 
     &--2 {
-      padding-left: #{$modal-inner-padding + rem-calc(map-get($spacers, 2))};
+      padding-left: #{$modal-inner-padding + rem-calc(map.get($spacers, 2))};
       @include media-breakpoint-up(md) {
         padding: 0;
       }
     }
 
     &--3 {
-      padding-left: #{$modal-inner-padding + rem-calc(map-get($spacers, 3))};
+      padding-left: #{$modal-inner-padding + rem-calc(map.get($spacers, 3))};
       @include media-breakpoint-up(md) {
-        padding-left: map-get($spacers, 2);
+        padding-left: map.get($spacers, 2);
       }
     }
 
     &--4 {
-      padding-left: #{$modal-inner-padding + rem-calc(map-get($spacers, 4))};
+      padding-left: #{$modal-inner-padding + rem-calc(map.get($spacers, 4))};
       @include media-breakpoint-up(md) {
-        padding-left: map-get($spacers, 2);
+        padding-left: map.get($spacers, 2);
       }
     }
 
@@ -129,7 +131,7 @@
       right: 0;
       left: 0;
       z-index: 100;
-      padding: map-get($spacers, 4) map-get($spacers, 4) map-get($spacers, 3);
+      padding: map.get($spacers, 4) map.get($spacers, 4) map.get($spacers, 3);
       visibility: hidden;
       background: $white;
       box-shadow: $box-shadow;
