--- a/_dev/css/theme/components/product/_stars.scss
+++ b/_dev/css/theme/components/product/_stars.scss
@@ -1,3 +1,5 @@
+@use "sass:map";
+
 .star-content {
   position: absolute;
   top: 0;
@@ -54,7 +56,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  padding: map-get($spacers, 2);
+  padding: map.get($spacers, 2);
   visibility: hidden;
   background: rgba($white, 0.4);
 
