--- a/_dev/css/theme/components/search/_search-form.scss
+++ b/_dev/css/theme/components/search/_search-form.scss
@@ -1,3 +1,5 @@
+@use "sass:map";
+
 .search-form {
   position: relative;
   max-width: rem-calc(620px);
@@ -32,7 +34,7 @@
     top: 0;
     right: 0;
     bottom: 0;
-    padding: 0 map-get($spacers, 3);
+    padding: 0 map.get($spacers, 3);
     line-height: 1;
     color: $primary;
   }
