scss lint error

--- a/_dev/css/theme/base/_fonts.scss
+++ b/_dev/css/theme/base/_fonts.scss
@@ -53,6 +53,10 @@ $material-design-icons-font-directory-path: '~material-design-icons-iconfont/dis
 
   /* Support for IE. */
   font-feature-settings: "liga";
+
+  .asd {
+
+  }
 }
 
 /* roboto-regular - latin-ext_latin */
