--- a/_dev/css/theme/layout/_header.scss
+++ b/_dev/css/theme/layout/_header.scss
@@ -3,14 +3,11 @@
 
 .l-header {
   margin: 0 0 map.get($spacers, 3);
-  border-bottom: 1px solid $border-color;
 }
 
 .header-top {
-  padding: map.get($spacers, 2) 0;
-  @include media-breakpoint-up(md) {
-    padding: 0;
-  }
+  background: $white;
+  border-bottom: 1px solid $border-color;
 
   &__row {
     flex-wrap: nowrap;
