--- a/_dev/css/fonts/icomoon/variables.scss
+++ b/_dev/css/fonts/icomoon/variables.scss
@@ -1,6 +1,8 @@
 $icomoon-font-family: "icomoon" !default;
 $icomoon-font-path: "fonts" !default;
 
+$icon-ps-socialfollow-discord: "\e909";
+$icon-tiktok: "\e90a";
 $icon-facebook: "\e900";
 $icon-gplus: "\e901";
 $icon-instagram: "\e902";
