--- a/_dev/css/fonts/icomoon/style.css
+++ b/_dev/css/fonts/icomoon/style.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: 'icomoon';
   src:
-    url('fonts/icomoon.ttf?qzbeni') format('truetype'),
-    url('fonts/icomoon.woff?qzbeni') format('woff'),
-    url('fonts/icomoon.svg?qzbeni#icomoon') format('svg');
+    url('fonts/icomoon.ttf?yhufbt') format('truetype'),
+    url('fonts/icomoon.woff?yhufbt') format('woff'),
+    url('fonts/icomoon.svg?yhufbt#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -24,6 +24,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-ps-socialfollow-discord:before {
+  content: "\e909";
+}
+.icon-tiktok:before {
+  content: "\e90a";
+}
 .icon-facebook:before {
   content: "\e900";
 }
