--- a/_dev/css/theme/components/customer/_customer-links.scss
+++ b/_dev/css/theme/components/customer/_customer-links.scss
@@ -44,7 +44,8 @@
       white-space: normal;
     }
 
-    @include hover-focus() {
+    &:hover,
+    &:focus {
       color: $primary;
       text-decoration: none;
     }
