--- a/_dev/css/listing/components/listing-display/_display-toggle.scss
+++ b/_dev/css/listing/components/listing-display/_display-toggle.scss
@@ -10,7 +10,8 @@
     background: $gray-100;
     border-radius: 50%;
 
-    @include hover-focus() {
+    &:hover,
+    &:focus {
       color: $gray-900;
       background: $gray-200;
     }
