--- a/_dev/css/abstracts/_index.scss
+++ b/_dev/css/abstracts/_index.scss
@@ -1,10 +1,12 @@
 @import "~bootstrap/scss/functions";
 
-@import "functions/index";
-@import "variables/index";
-@import "mixins/index";
+@import "functions";
+@import "variables";
+@import "mixins";
 
 @import "~bootstrap/scss/variables";
 @import "~bootstrap/scss/variables-dark";
 @import "~bootstrap/scss/maps";
 @import "~bootstrap/scss/mixins";
+
+@import "maps";
