changed primary color, disabled link decoration

--- a/_dev/css/abstracts/variables/bootstrap/_typography.scss
+++ b/_dev/css/abstracts/variables/bootstrap/_typography.scss
@@ -37,3 +37,5 @@ $headings-margin-bottom:      rem-calc(20px);
 $headings-font-weight:        700;
 $headings-line-height:        1.2;
 $headings-color:              $gray-900;
+
+$link-decoration:             none;
