--- a/_dev/css/abstracts/variables/bootstrap/_colors.scss
+++ b/_dev/css/abstracts/variables/bootstrap/_colors.scss
@@ -23,7 +23,7 @@ $green:   #28a745;
 $teal:    #20c997;
 $cyan:    #17a2b8;
 
-$primary:       $blue;
+$primary:       $gray-900;
 $secondary:     $gray-600;
 $success:       $green;
 $info:          $cyan;
