--- a/_dev/css/theme/utility/_dynamic-import-fix.scss
+++ b/_dev/css/theme/utility/_dynamic-import-fix.scss
@@ -10,7 +10,7 @@
 
 //FIX TO TOAST, opacity by default
 .toast:not(.show),
-.fade:not(.show) {
+.fade:not(.show):not(.active) {
   opacity: 0;
   display: none;
 }
