--- a/_dev/css/theme/override/bootstrap/_form.scss
+++ b/_dev/css/theme/override/bootstrap/_form.scss
@@ -43,6 +43,8 @@
     inset: 0;
     margin: 0;
     opacity: 0;
+    width: 100%;
+    height: 100%;
 
     &:checked {
       ~ .form-check-label-color {
