Offcanvas adjustments for dynamic import, missing styling import

--- a/_dev/css/dynamic/offcanvas/_override.scss
+++ b/_dev/css/dynamic/offcanvas/_override.scss
@@ -1,1 +1,6 @@
 // Styles override for the offcanvas component
+
+
+.offcanvas-footer {
+  padding: var(--bs-offcanvas-padding-y) var(--bs-offcanvas-padding-x);
+}
